--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@
     --light: #ffffff;
     --dark: #002860;
 }
-
+.hidden {
+    display: none;
+  }
 .background-img {
     position:absolute;
     height: 100%;
@@ -12,6 +14,13 @@
     left: 0;
     object-fit: cover;
     opacity: 0.1;
+}
+.centralize-mobile {
+    @media screen and (max-width: 768px) {
+        align-items: center;
+        justify-content: center;
+        text-align: center;  
+    }
 }
 
 .fw-medium {
@@ -74,6 +83,10 @@
 .btn-lg-square {
     width: 48px;
     height: 48px;
+    @media (max-width: 768px) {
+        width: 20px;
+        height: 20px;
+    }
 }
 
 .btn-square,
@@ -155,6 +168,7 @@
 /*** Header ***/
 .owl-carousel-inner {
     position: absolute;
+    z-index: 2;
     width: 100%;
     height: 100%;
     top: 0;
@@ -582,4 +596,10 @@
 
 .footer .copyright a:hover {
     color: var(--primary);
+}
+
+@media (max-width: 768px) {
+    .carousel-logo-overlay {
+        opacity: 0.0;
+    }
 }
