--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,11 @@
     transition: .5s;
 }
 
+.btn.btn-whatsapp {
+    background-color: darkgreen;
+    border-color: darkgreen;
+}
+
 .btn.btn-primary,
 .btn.btn-outline-primary:hover {
     color: #FFFFFF;
@@ -84,8 +89,22 @@
     width: 48px;
     height: 48px;
     @media (max-width: 768px) {
-        width: 20px;
-        height: 20px;
+        width: 48px;
+        height: 48px;
+    }
+}
+.btn-lg-square-spec {
+    width: 48px;
+    height: 48px;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: normal;
+    @media (max-width: 768px) {
+        width: 30px;
+        height: 22px;
+        margin-inline-end: 0px !important;
     }
 }
 
